# katsuo-pcie

./: README.md  pyproject.toml
katsuo/pcie/: code.py  pipe.py
katsuo/pcie/dll/: __init__.py  dllp.py  misc.py  tlp.py
katsuo/pcie/mac/: __init__.py  ltssm.py  skip_set.py  training_set.py
katsuo/pcie/phy/: ecp5_serdes.py
katsuo/pcie/tl/: capability.py  config_handler.py  config_space.py  endpoint.py  mem_handler.py  msi.py  packet.py  test_timer.py
tests/: test_dll.py  test_lane_aligner.py  test_ltssm.py
